# Torch-Playground

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  README.md  Untitled.ipynb  config.json  config.py  debug.ipynb  input.pkl  input_other.pkl  main-siamese-fewshot.py  main-siamese.py  main.py  notebook.ipynb  pipeline.py  pyproject.toml  run.sh  test.py  utils.py
.github/workflows/: ci.yml
data/: data.py
experiments/: debug.ipynb  run.sh  seeds_compare.sh  test.py
models/: densenet.py  densenet3.py  models.py  resnet.py  shufflenet.py
tests/: conftest.py  test_data.py  test_models.py  test_utils.py
